<resources>
    <string name="app_name">7FreshDemo</string>

    <string name="top_tab_product">商品</string>
    <string name="top_tab_comment">评价</string>
    <string name="top_tab_detail">详情</string>
    <string name="top_tab_recommend">推荐</string>

    <!-- Dialog -->
    <string name="dialog_default_confirm">确定</string>
    <string name="dialog_default_cancel">取消</string>
    <string name="dialog_default_done">我知道了</string>

    <!-- Web -->
    <string name="common_web_error">获取数据失败, 点我重试</string>

    <!-- Splash -->
    <string name="splash_skip">跳过&#160;&#160;%1$d</string>

    <!-- Main -->
    <string name="main_add">加入购物车</string>
    <string name="main_top">返回\n顶部</string>

    <string name="main_banner_indicator">%1$d/%2$d</string>
    <string name="main_price">¥%1$s</string>
    <string name="main_icon">七鲜</string>
    <string name="main_full_address">7FRESH%1$s</string>
    <string name="main_delivery">送至</string>

    <!-- Cart -->
    <string name="cart_title">购物车</string>
    <string name="cart_all">全选</string>
    <string name="cart_total">合计：</string>
    <string name="cart_pay">去结算(%1$d)</string>
    <string name="cart_spec">规格:%1$s</string>
    <string name="cart_delete">删除</string>
    <string name="cart_price">¥%1$s</string>
    <string name="cart_unit">/%1$s</string>

    <string name="cart_delete_single_warn">确定删除商品吗?</string>
    <string name="cart_delete_batch_warn">确认是否删除这%1$d件商品</string>

    <string name="cart_empty">购物车是空的，快去挑选商品吧</string>
    <string name="cart_shopping">去首页逛逛</string>

    <!-- Order -->
    <string name="order_title">确认订单</string>
    <string name="order_delivery">配送到家</string>
    <string name="order_pickup">到店自提</string>
    <string name="order_price_desc">实付款:</string>
    <string name="order_price">¥%1$s</string>
    <string name="order_submit">提交订单</string>

    <string name="order_name">张张</string>
    <string name="order_phone">135****4520</string>
    <string name="order_address">北京经济技术开发区1号楼101</string>

    <string name="order_store_pre">7FRESH</string>
    <string name="order_store">大族广场店</string>

    <string name="order_delivery_instant">立即配送</string>
    <string name="order_delivery_time">请选择送达时间</string>

    <string name="order_product_count">共%1$d种</string>

    <string name="order_price_total">商品总额</string>
    <string name="order_price_shipping">运费</string>

    <string name="order_coupon">优惠券</string>

    <string name="order_stockout">商品若缺货</string>
    <string name="order_stockout_desc">其它商品继续配送（缺货商品退款）</string>

    <!-- QR -->
    <string name="qr_capture_title">扫一扫</string>
    <string name="qr_capture_manual">对准二维码/条形码到框内即可扫描</string>
    <string name="qr_capture_invalid">扫描失败，请使用正确的二维码</string>

</resources>