<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="279dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_common_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/content_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:minHeight="70dp"
        android:textColor="@color/text_33"
        android:textSize="14sp"
        tools:text="真心的希望为您带来更多乐趣" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_F0" />

    <LinearLayout
        android:id="@+id/double_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_default_cancel"
            android:textColor="@color/text_33"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_F0" />

        <TextView
            android:id="@+id/confirm_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_default_confirm"
            android:textColor="@color/text_teal"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/single_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/done_textview"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/dialog_default_done"
            android:textColor="@color/text_teal"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>


